--- a/css/style.css
+++ b/css/style.css
@@ -70,12 +70,14 @@ h1 {
 /* = Classes usada para esconder elementos = */
 
 .hide {
+    display: none;
     opacity: 0;
     transform: scale(0);
     transition: all 1.3s ease-out;
 }
 
 .unHide {
+    display: inherit;
     opacity: 1;
     transform: scale(1);
     transition: all 1.3s ease-out;
@@ -128,6 +130,11 @@ h1 {
 .isRequired::after {
     content: '*';
     color: red;
+}
+
+.loginout-body {
+    margin-top: 80px;
+    overflow-y: hidden;
 }
 
 /* === */
@@ -289,10 +296,35 @@ h1 {
 #menuNav ul .dropdown .dropdown-item {
     color: var(--CorPreto);
     font-weight: var(--FonteSemiBold);
+    border-radius: 4px;
+    padding: 8px;
 }
 
 #menuNav ul .dropdown .dropdown-item:hover {
     color: var(--CorPreto2);
+}
+
+#menuNav ul .dropdown-menu {
+    padding: 16px;
+}
+
+.horizontal-bar {
+    width: 100%;
+    height: 2px;
+    background-color: var(--CorPreto);
+    margin: 8px auto;
+}
+
+#navbar .dropdown-cadastrar {
+    color: var(--CorBranco2) !important;
+    background-color: var(--CorBase) !important;
+    border-radius: 4px;
+    transition: color 0.2s;
+}
+
+#navbar .dropdown-cadastrar:hover {
+    color: var(--CorBranco) !important;
+    background-color: var(--CorBaseHover) !important;
 }
 
 #menuNav.navbar-mobile ul li {
@@ -410,7 +442,7 @@ h1 {
 
 .hero-botoes-empresa {
     color: var(--CorBranco2);
-    background: none;
+    background: transparent;
     border: 1px solid var(--CorBranco2);
     font-size: 24px;
     font-weight: var(--FonteBold);
@@ -435,8 +467,7 @@ h1 {
 .hero-botoes-empresa:hover {
     color: var(--CorCinza);
     border: 1px solid var(--CorCinza);
-    background-color: transparent';
-
+    background-color: transparent;
 }
 
 @keyframes zoomIn-zoomOut {
@@ -564,9 +595,12 @@ h1 {
 .carousel-text {
     position: absolute;
     top: 0;
-    padding: 0 80px 0 32px;
     margin-top: 32px;
     height: 100%;
+}
+
+.carousel-text h2, .carousel-text p {
+    margin-left: 32px;
 }
 
 .carousel-text h2 {
@@ -611,6 +645,10 @@ h1 {
 
 .carousel-indicators {
     margin-bottom: -48px;
+}
+
+.carousel-item img {
+    clip-path: polygon(55% 0, 100% 0%, 100% 100%, 44% 100%);
 }
 
 /* === */
@@ -1037,14 +1075,14 @@ h1 {
     color: var(--CorBase);
     font-size: 32px;
     font-weight: var(--FonteSemiBold);
-    margin-bottom: 32px;
+    margin: 32px 0;
 }
 
 .bg-loginout h2 {
     color: var(--CorPreto);
     font-size: 24px;
     font-weight: var(--FonteMedio);
-    margin-bottom: 16px;
+    margin: 16px 0 32px 0;
 }
 
 .bg-loginout .loginout-infos {
@@ -1198,7 +1236,7 @@ h1 {
 .bg-cotacao-empresas img {
     height: 110px;
     width: 110px;
-    background: white;
+    background: transparent;
     border-radius: 50%;
     object-fit: scale-down;
     margin: 16px 0;
@@ -1207,7 +1245,8 @@ h1 {
 .bg-cotacao-empresas {
     background-color: var(--CorBranco);
     margin: 160px 0;
-    padding-bottom: 32px;
+    padding: 64px 0 32px 0;
+    clip-path: polygon(0 0, 100% 5%, 100% 100%, 0% 100%);
 }
 
 .bg-cotacao-formulario form i {
@@ -1225,6 +1264,10 @@ h1 {
     font-size: 16px;
     font-weight: var(--FonteMedio);
 }
+
+/* === */
+
+/* === Pagina de Cadastro === */
 
 /* === */
 
@@ -1251,11 +1294,9 @@ h1 {
     border-radius: 50px;
     border: 1px solid transparent;
     transition: all 0.2s ease-out;
-    position: absolute;
-    bottom: 60px;
+    position: relative;
+    bottom: -200px;
     width: 70%;
-    justify-content: end;
-    align-self: flex-end;
 }
 
 .btn-saibaMais:hover {
@@ -1278,6 +1319,22 @@ h1 {
     transform: translateY(-4px);
 }
 
+.btn-cotacao {
+    color: var(--CorBranco2);
+    background-color: var(--CorBase);
+    font-size: 16px;
+    font-weight: var(--FonteSemiBold);
+    border-radius: 12px;
+    border: none;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    padding: 16px 0;
+    margin: 16px 0;
+    border: 1px solid var(--CorBase);
+}
+
 .btn-loginout {
     color: var(--CorBranco2);
     background-color: var(--CorBase);
@@ -1289,11 +1346,51 @@ h1 {
     width: 100%;
     padding: 16px 0;
     margin: 16px 0;
+    border: 1px solid var(--CorBase);
 }
 
 .btn-loginout:hover {
     color: var(--CorBranco);
     background-color: var(--CorBaseHover);
+    border: 1px solid var(--CorBaseHover);
+}
+
+.btn-loginout.empresa {
+    color: var(--CorBase);
+    background-color: var(--CorBranco2);
+    border: 1px solid var(--CorBase);
+}
+
+.btn-loginout.souEmpresa {
+    border-radius: 0 12px 12px 0;
+    margin: 32px 0 16px 0;
+}
+
+.btn-loginout.souMotorista {
+    border-radius: 12px 0 0 12px;
+    margin: 32px 0 16px 0;
+}
+
+.btn-loginout.active {
+    color: var(--CorBranco2);
+    background-color: var(--CorBase);
+    border: 1px solid var(--CorBase);
+}
+
+.btn-loginout.active:hover {
+    color: var(--CorBranco);
+    background-color: var(--CorBaseHover);
+}
+
+.btn-loginout.noActive {
+    border: 1px solid var(--CorBase);
+    color: var(--CorCinza);
+    background: var(--CorBranco2);
+}
+
+.btn-loginout.noActive:hover {
+    color: var(--CorCinzaEscuro);
+    background: var(--CorBranco);
 }
 
 /* === */
@@ -1314,6 +1411,12 @@ h1 {
 /* Celular */
 
 @media (min-width: 300px) and (max-width: 767.98px) {
+    .loginout-body {
+        overflow-y: inherit;
+    }
+    .navLogo {
+        padding: 8px 0;
+    }
     .bg-aplicativoInfo {
         width: auto;
     }
@@ -1355,7 +1458,7 @@ h1 {
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
         padding-top: 80px;
         padding-bottom: 80px;
-        margin-bottom: 240px;
+        margin-bottom: 80px;
     }
     .bg-numeros h3 {
         margin-bottom: 40px;
@@ -1462,6 +1565,48 @@ h1 {
         height: auto;
         width: 90%;
     }
+    .bg-cotacao-empresas picture {
+        margin: 4px;
+    }
+    .bg-cotacao-empresas h4 {
+        word-break: break-word;
+        max-width: 90px;
+    }
+    .bg-cotacao-empresas {
+        padding: 32px 0;
+        clip-path: polygon(0 0, 100% 0%, 100% 100%, 0% 100%);
+    }
+    .bg-cotacao-formulario {
+        width: 90%;
+    }
+    .btn-saibaMais {
+        font-size: 16px;
+        padding: 8px 16px;
+        width: 50%;
+        bottom: -48px;
+    }
+    .bg-carrosel {
+        width: 100%;
+    }
+    .carousel-item img {
+        clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
+    }
+    .carousel-text h2 {
+        font-size: 22px;
+        color: var(--CorBranco2);
+    }
+    .carousel-item p {
+        margin-top: 0;
+        font-size: 16px;
+        color: var(--CorBranco2);
+    }
+    .bg-carrosel {
+        background-color: var(--CorBranco2);
+    }
+    .carousel-control-prev, .carousel-control-prev{
+        display: none;
+        opacity: 0;
+    }
 }
 
 /* Tablet */
@@ -1515,6 +1660,39 @@ h1 {
         background: var(--CorBranco2);
         height: auto;
         width: 70%;
+    }
+    .btn-saibaMais {
+        font-size: 24px;
+        padding: 8px 16px;
+        width: 50%;
+        bottom: -200px;
+    }
+    .bg-carrosel {
+        width: 100%;
+    }
+    .carousel-item img {
+        clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
+    }
+    .carousel-text {
+        width: 100%;
+        justify-content: center;
+    }
+    .carousel-text h2 {
+        margin: 64px 0 0 0;
+        font-size: 32px;
+        color: var(--CorBranco2);
+        max-width: none;
+        text-align: center;
+    }
+    .carousel-item p {
+        margin: 32px 0 0 0;
+        font-size: 24px;
+        color: var(--CorBranco2);
+        max-width: none;
+        text-align: center;
+    }
+    .bg-carrosel {
+        background-color: var(--CorBranco2);
     }
 }
 
