--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 :root {
     /* SEÇÃO DE CORES */
     --CorBase: #8B0000;
-    --CorBaseHover: #700000;
+    --CorBaseHover: #8B0000;
     --CorBranco: #F8F8F8;
     --CorBranco2: #fff;
     --CorCinza: #DBDBDB;
@@ -72,21 +72,24 @@ h1 {
 .hide {
     display: none;
     opacity: 0;
-    transform: scale(0);
-    transition: all 1.3s ease-out;
+    -webkit-opacity: 0;
+    transition: all 2s ease-in;
+    -webkit-transition: all 2s ease-in;
 }
 
 .unHide {
     display: inherit;
     opacity: 1;
-    transform: scale(1);
-    transition: all 1.3s ease-out;
+    -webkit-opacity: 1;
+    transition: all 2s ease-in;
+    -webkit-transition: all 2s ease-in;
 }
 
 .bg-circulo-vermelhos {
     width: 150px;
     height: 150px;
     opacity: 0.7;
+    -webkit-opacity: 0.7;
     background: repeating-linear-gradient( 240deg, rgba(255, 255, 255, 0) .8px, #e2626b 1.6px, #e2626b 3px, rgba(255, 255, 255, 0) 3.8px, rgba(255, 255, 255, 0) 10px);
 }
 
@@ -94,8 +97,10 @@ h1 {
     width: 145px;
     height: 145px;
     opacity: 0.7;
+    -webkit-opacity: 0.7;
     background: radial-gradient(var(--CorBase) 2px, transparent 2.5px);
     background-size: .75rem .75rem;
+    -webkit-background-size: .75rem .75rem;
 }
 
 .rounded-circle {
@@ -115,11 +120,13 @@ h1 {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
 }
 
 .bg-parallax {
     background: url(../img/homem-celular.jpg) fixed;
     background-size: cover;
+    -webkit-background-size: cover;
     background-repeat: no-repeat;
     height: 550px;
     max-height: 600px;
@@ -134,7 +141,20 @@ h1 {
 
 .loginout-body {
     margin-top: 80px;
-    overflow-y: hidden;
+}
+
+.slideLeft {
+    transform: translateX(0) !important;
+    -webkit-transform: translateX(0) !important;
+    transition: all 1s;
+    -webkit-transition: all 1s;
+}
+
+.slideRight {
+    transform: translateX(3000) !important;
+    -webkit-transform: translateX(3000) !important;
+    transition: all 1s;
+    -webkit-transition: all 1s;
 }
 
 /* === */
@@ -148,6 +168,7 @@ h1 {
     padding-bottom: 0 !important;
     margin-top: -4px;
     transition: all 0.2s;
+    -webkit-transition: all 0.2s;
 }
 
 /* Fundo da Navbar */
@@ -158,6 +179,7 @@ h1 {
     padding-top: 0;
     padding-bottom: 0;
     transition: all 0.2s;
+    -webkit-transition: all 0.2s;
 }
 
 .navbar-toggler {
@@ -190,6 +212,7 @@ h1 {
     width: 0px;
     background: transparent;
     transition: width .2s ease, background-color .2s ease;
+    -webkit-transition: width .2s ease, background-color .2s ease;
 }
 
 #navbar.topbar-hide #menuNav ul li a .navItemText:hover:after {
@@ -203,14 +226,17 @@ h1 {
     margin: auto;
     height: 3px;
     opacity: 0;
+    -webkit-opacity: 0;
     width: 0px;
     background: transparent;
     transition: width .2s ease, background-color .2s ease;
+    -webkit-transition: width .2s ease, background-color .2s ease;
 }
 
 #navbar #menuNav ul li a .navItemText:hover:after {
     width: 100%;
     opacity: 0.8;
+    -webkit-opacity: 0.8;
     background: var(--CorBase);
 }
 
@@ -286,6 +312,7 @@ h1 {
     margin-top: 4px;
     border: none;
     transition: color .2s;
+    -webkit-transition: color .2s;
 }
 
 #navbar .botao-entrar:hover {
@@ -320,6 +347,7 @@ h1 {
     background-color: var(--CorBase) !important;
     border-radius: 4px;
     transition: color 0.2s;
+    -webkit-transition: color 0.2s;
 }
 
 #navbar .dropdown-cadastrar:hover {
@@ -337,12 +365,13 @@ h1 {
 
 .bg-hero {
     padding: 0;
-    margin-bottom: 160px;
+    margin-bottom: 120px;
     width: 100%;
     height: 90vh;
     position: relative;
     background: url(../img/caminhoneiro2-vermelho.jpg);
     background-size: cover;
+    -webkit-background-size: cover;
     background-position: center top;
     clip-path: polygon(0 0, 100% 0, 100% 95%, 0% 100%);
 }
@@ -355,6 +384,7 @@ h1 {
     position: relative;
     background: url(../img/caminhoneiro3-vermelho.jpg);
     background-size: cover;
+    -webkit-background-size: cover;
     background-position: center -170px;
     clip-path: polygon(53% 0, 100% 0, 100% 70%, 100% 89%, 65% 100%, 18% 100%, 0 100%, 0 0);
 }
@@ -367,19 +397,21 @@ h1 {
     position: relative;
     background: url(../img/company-background.jpg);
     background-size: cover;
+    -webkit-background-size: cover;
     background-position: center -170px;
     clip-path: polygon(53% 0, 100% 0, 100% 70%, 100% 89%, 65% 100%, 18% 100%, 0 100%, 0 0);
 }
 
 .hero-content {
     position: relative;
-    margin-top: -560px;
+    margin-top: -460px;
 }
 
 .hero-celular {
     position: relative;
-    margin-top: -720px;
+    margin-top: -620px;
     animation: zoomIn-zoomOut 4s infinite;
+    -webkit-animation: zoomIn-zoomOut 4s infinite;
     z-index: 1000;
 }
 
@@ -447,6 +479,7 @@ h1 {
     font-size: 24px;
     font-weight: var(--FonteBold);
     transition: all 0.2s;
+    -webkit-transition: all 0.2s;
 }
 
 .hero-botoes-motorista {
@@ -456,6 +489,7 @@ h1 {
     font-size: 24px;
     font-weight: var(--FonteBold);
     transition: all 0.2s;
+    -webkit-transition: all 0.2s;
     margin-right: 16px;
 }
 
@@ -473,19 +507,22 @@ h1 {
 @keyframes zoomIn-zoomOut {
     0% {
         transform: scale(1);
+        -webkit-transform: scale(1);
     }
     50% {
         transform: scale(1.05);
+        -webkit-transform: scale(1.05);
     }
     100% {
         transform: scale(1);
+        -webkit-transform: scale(1);
     }
 }
 
 /* === Como Funciona === */
 
 .bg-comoFunciona {
-    margin-bottom: 160px;
+    margin-bottom: 120px;
     background: var(--CorBranco2);
     z-index: -20;
     padding-bottom: 32px;
@@ -498,6 +535,7 @@ h1 {
     border-radius: 12px;
     margin: 16px 0;
     transition: all 0.2s ease-out;
+    -webkit-transition: all 0.2s ease-out;
     z-index: 2;
 }
 
@@ -539,6 +577,7 @@ h1 {
 .caminhao-anim {
     position: relative;
     animation: up-down 4s infinite ease-in-out;
+    -webkit-animation: up-down 4s infinite ease-in-out;
 }
 
 @keyframes up-down {
@@ -556,7 +595,7 @@ h1 {
 /* === Carrosel === */
 
 .bg-carrosel {
-    margin: 160px auto;
+    margin: 120px auto;
     width: 75%;
     display: block;
     border-top-left-radius: 12px;
@@ -566,11 +605,13 @@ h1 {
 .bg-carrosel .carousel-control-prev {
     left: -160px !important;
     opacity: 1;
+    -webkit-opacity: 1;
 }
 
 .bg-carrosel .carousel-control-next {
     right: -160px !important;
     opacity: 1;
+    -webkit-opacity: 1;
 }
 
 .bg-carrosel .carousel-control-prev span, .bg-carrosel .carousel-control-next span {
@@ -590,13 +631,6 @@ h1 {
 
 .bg-carrosel span:hover i {
     color: var(--CorBranco);
-}
-
-.carousel-text {
-    position: absolute;
-    top: 0;
-    margin-top: 32px;
-    height: 100%;
 }
 
 .carousel-text h2, .carousel-text p {
@@ -634,6 +668,7 @@ h1 {
 
 .carousel-indicators [data-bs-target]:hover {
     opacity: 0.9;
+    -webkit-opacity: 0.9;
 }
 
 .carousel-indicators .active {
@@ -649,6 +684,12 @@ h1 {
 
 .carousel-item img {
     clip-path: polygon(55% 0, 100% 0%, 100% 100%, 44% 100%);
+    height: 80vh;
+    object-fit: cover;
+    border-bottom-right-radius: 12px;
+    filter: none;
+    transition: all 0.2s;
+    -webkit-transition: all 0.2s;
 }
 
 /* === */
@@ -700,7 +741,7 @@ h1 {
 }
 
 .bg-motorista-veiculo3, .bg-empresa3 {
-    margin-bottom: 240px;
+    margin-bottom: 120px;
 }
 
 .bg-motorista-veiculo3 picture img, .bg-empresa3 picture img {
@@ -727,11 +768,13 @@ h1 {
 /* === Números estatisticos === */
 
 .bg-numeros {
-    background: var(--CorBase);
+    background: linear-gradient(153deg, rgba(139, 0, 0, 1) 0%, rgba(139, 0, 0, 1) 100%);
     clip-path: polygon(0 0, 100% 8%, 100% 100%, 0 92%);
     padding-top: 120px;
     padding-bottom: 160px;
-    margin-bottom: 240px;
+    margin-bottom: 120px;
+    transform: translateX(-3000px);
+    -webkit-transform: translateX(-3000px);
 }
 
 .bg-numeros h2 {
@@ -779,6 +822,7 @@ h1 {
     font-size: 32px;
     color: var(--CorPreto);
     transition: all 0.2s;
+    -webkit-transition: all 0.2s;
 }
 
 .bg-numeros .card .card-body span {
@@ -786,6 +830,7 @@ h1 {
     font-size: 64px;
     font-weight: var(--FonteBold);
     justify-content: center;
+    -webkit-justify-content: center;
     text-align: center;
     cursor: default;
 }
@@ -882,11 +927,12 @@ h1 {
 
 .bg-footer {
     background-color: var(--CorBranco2);
-    margin-top: 240px;
+    margin-top: 120px;
 }
 
 .bg-footer .bg-footer-contato {
     box-shadow: 14px 14px 12px 0 rgb(0 0 0 / 20%);
+    -webkit-box-shadow: 14px 14px 12px 0 rgb(0 0 0 / 20%);
     margin-bottom: 48px;
 }
 
@@ -919,6 +965,7 @@ h1 {
     text-decoration: none;
     border-bottom: 2px none transparent;
     transition: color 0.2s;
+    -webkit-transition: color 0.2s;
 }
 
 .bg-footer ul li a:hover {
@@ -988,6 +1035,7 @@ h1 {
     font-size: 28px;
     color: var(--CorPreto);
     transition: all 0.2s;
+    -webkit-transition: all 0.2s;
 }
 
 .bg-footer .bg-redeSocial-icones:hover a {
@@ -1007,7 +1055,6 @@ h1 {
     background-color: var(--CorBranco);
     padding: 64px 0;
     width: 100%;
-    margin-bottom: 240px;
 }
 
 .bg-cadastrar a {
@@ -1019,6 +1066,7 @@ h1 {
     display: flex;
     text-align: center;
     justify-content: center;
+    -webkit-justify-content: center;
     align-items: center;
     padding: 32px 0;
 }
@@ -1028,6 +1076,7 @@ h1 {
     background: var(--CorBranco);
     border: 1px solid var(--CorBase);
     transition: all .2s;
+    -webkit-transition: all .2s;
 }
 
 .bg-cadastrar .btn-link-entrar:hover {
@@ -1041,6 +1090,7 @@ h1 {
     background: var(--CorBase);
     border: 1px solid var(--CorBase);
     transition: all .2s;
+    -webkit-transition: all .2s;
 }
 
 .bg-cadastrar .btn-link-cadastrar:hover {
@@ -1069,6 +1119,7 @@ h1 {
     text-align: center;
     align-items: center;
     justify-content: center;
+    -webkit-justify-content: center;
 }
 
 .bg-loginout h1 {
@@ -1082,7 +1133,7 @@ h1 {
     color: var(--CorPreto);
     font-size: 24px;
     font-weight: var(--FonteMedio);
-    margin: 16px 0 32px 0;
+    margin: 32px 0 16px 0;
 }
 
 .bg-loginout .loginout-infos {
@@ -1165,7 +1216,9 @@ h1 {
     position: relative;
     background: url(../img/background-quotation-vermelho.jpg);
     background-size: cover;
+    -webkit-background-size: cover;
     background-position: center -315px;
+    clip-path: polygon(53% 0, 100% 0, 100% 70%, 100% 89%, 65% 100%, 18% 100%, 0 100%, 0 0);
 }
 
 .hero-content-cotacao h1 {
@@ -1244,7 +1297,7 @@ h1 {
 
 .bg-cotacao-empresas {
     background-color: var(--CorBranco);
-    margin: 160px 0;
+    margin: 120px 0;
     padding: 64px 0 32px 0;
     clip-path: polygon(0 0, 100% 5%, 100% 100%, 0% 100%);
 }
@@ -1283,20 +1336,7 @@ h1 {
     border: 1px solid transparent;
     margin-top: 32px;
     transition: all 0.2s;
-}
-
-.btn-saibaMais {
-    color: var(--CorBranco2);
-    background-color: var(--CorBase);
-    padding: 22px 64px;
-    font-size: 24px;
-    font-weight: var(--FonteBold);
-    border-radius: 50px;
-    border: 1px solid transparent;
-    transition: all 0.2s ease-out;
-    position: relative;
-    bottom: -200px;
-    width: 70%;
+    -webkit-transition: all 0.2s;
 }
 
 .btn-saibaMais:hover {
@@ -1312,11 +1352,14 @@ h1 {
 
 .anim-botao {
     transform: translateY(0);
+    -webkit-transform: translateY(0);
     transition: transform 0.2s ease-out;
+    -webkit-transition: transform 0.2 ease-out;
 }
 
 .anim-botao:hover {
     transform: translateY(-4px);
+    -webkit-transform: translateY(-4px);
 }
 
 .btn-cotacao {
@@ -1328,11 +1371,18 @@ h1 {
     border: none;
     display: block;
     justify-content: center;
+    -webkit-justify-content: center;
     align-items: center;
     width: 100%;
     padding: 16px 0;
     margin: 16px 0;
     border: 1px solid var(--CorBase);
+}
+
+.btn-cotacao:hover {
+    color: var(--CorBranco);
+    background-color: var(--CorBaseHover);
+    border: 1px solid transparent;
 }
 
 .btn-loginout {
@@ -1399,11 +1449,14 @@ h1 {
 
 .sombra-caixa {
     box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 0px 24px 0px rgba(0, 0, 0, 0.2);
     transition: all 0.2s;
+    -webkit-transition: all 0.2s;
 }
 
 .sombra-caixa:hover {
     box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: 0px 0px 32px 0px rgba(0, 0, 0, 0.4);
 }
 
 /* === Media Queries === */
@@ -1506,6 +1559,7 @@ h1 {
     .bg-parallax {
         background: url(../img/homem-celular.jpg);
         background-size: contain;
+        -webkit-background-size: contain;
         background-repeat: no-repeat;
     }
     .bg-aplicativoInfo {
@@ -1579,33 +1633,52 @@ h1 {
     .bg-cotacao-formulario {
         width: 90%;
     }
-    .btn-saibaMais {
-        font-size: 16px;
-        padding: 8px 16px;
-        width: 50%;
-        bottom: -48px;
-    }
     .bg-carrosel {
         width: 100%;
     }
     .carousel-item img {
-        clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+        height: 70vh;
+    }
+    .carousel-text {
+        background-color: rgba(255, 255, 255, 0.9);
+        position: absolute;
+        bottom: 0;
+        height: 260px;
+        border-radius: 25px 25px 0 0;
     }
     .carousel-text h2 {
-        font-size: 22px;
-        color: var(--CorBranco2);
+        color: var(--CorPreto);
+        font-size: 32px;
+        font-weight: var(--FonteBold);
+        text-align: center;
+        margin: 16px 16px 0 16px;
     }
-    .carousel-item p {
-        margin-top: 0;
+    .carousel-text p {
         font-size: 16px;
-        color: var(--CorBranco2);
+        color: var(--CorPreto2);
+        font-weight: var(--FonteMedio);
+        margin: 8px 16px 0;
+        text-align: center;
     }
-    .bg-carrosel {
-        background-color: var(--CorBranco2);
-    }
-    .carousel-control-prev, .carousel-control-prev{
+    .carousel-control-prev, .carousel-control-prev {
         display: none;
         opacity: 0;
+        -webkit-opacity: 0;
+    }
+    .btn-saibaMais {
+        color: var(--CorBranco2);
+        background-color: var(--CorBase);
+        font-size: 16px;
+        font-weight: var(--FonteBold);
+        width: 50%;
+        padding: 8px 16px;
+        border-radius: 50px;
+        border: 1px solid transparent;
+        transition: all 0.2s ease-out;
+        -webkit-transition: all 0.2s ease-out;
+        position: relative;
+        margin-top: 24px;
     }
 }
 
@@ -1634,6 +1707,7 @@ h1 {
     }
     .bg-footer .bg-footer-contato {
         box-shadow: 0 12px 12px 0 rgba(0, 0, 0, 0.3);
+        -webkit-box-shadow: 0 12px 12px 0 rgba(0, 0, 0, 0.3);
     }
     .footer-botao-enviar {
         display: block;
@@ -1661,49 +1735,126 @@ h1 {
         height: auto;
         width: 70%;
     }
-    .btn-saibaMais {
-        font-size: 24px;
-        padding: 8px 16px;
-        width: 50%;
-        bottom: -200px;
-    }
     .bg-carrosel {
         width: 100%;
     }
     .carousel-item img {
-        clip-path: polygon(0 0, 100% 0, 100% 80%, 0% 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+        height: 70vh;
     }
     .carousel-text {
+        background-color: var(--CorBranco2);
+        position: absolute;
+        bottom: 0;
+        height: 260px;
         width: 100%;
-        justify-content: center;
+        border-radius: 25px 25px 0 0;
     }
     .carousel-text h2 {
-        margin: 64px 0 0 0;
+        color: var(--CorPreto);
         font-size: 32px;
-        color: var(--CorBranco2);
+        font-weight: var(--FonteBold);
+        text-align: center;
+        max-width: none;
+        margin: 32px 16px 0 16px;
+    }
+    .carousel-text p {
+        font-size: 16px;
+        color: var(--CorPreto2);
+        font-weight: var(--FonteMedio);
+        margin: 8px 16px 0;
+        padding: 0 32px;
         max-width: none;
         text-align: center;
     }
-    .carousel-item p {
-        margin: 32px 0 0 0;
-        font-size: 24px;
-        color: var(--CorBranco2);
-        max-width: none;
-        text-align: center;
+    .carousel-control-prev, .carousel-control-prev {
+        display: none;
+        opacity: 0;
+        -webkit-opacity: 0;
     }
-    .bg-carrosel {
-        background-color: var(--CorBranco2);
+    .btn-saibaMais {
+        color: var(--CorBranco2);
+        background-color: var(--CorBase);
+        font-size: 16px;
+        font-weight: var(--FonteBold);
+        width: 50%;
+        padding: 8px 16px;
+        border-radius: 50px;
+        border: 1px solid transparent;
+        transition: all 0.2s ease-out;
+        -webkit-transition: all 0.2s ease-out;
+        position: relative;
+        margin-top: 24px;
     }
 }
 
 /* Desktop */
 
-@media (min-width: 1026px) and (max-width: 1399.98px) {}
+@media (min-width: 1026px) and (max-width: 1399.98px) {
+    .carousel-text {
+        position: absolute;
+        top: 0;
+        margin-top: 32px;
+        height: 100%;
+    }
+    .btn-saibaMais {
+        color: var(--CorBranco2);
+        background-color: var(--CorBase);
+        padding: 22px 64px;
+        font-size: 24px;
+        font-weight: var(--FonteBold);
+        border-radius: 50px;
+        border: 1px solid transparent;
+        transition: all 0.2s ease-out;
+        -webkit-transition: all 0.2s ease-out;
+        position: absolute;
+        bottom: 56px;
+        left: 32px;
+        width: 70%;
+    }
+}
 
 /* Large Desktop */
 
 @media (min-width: 1400px) {
     .bg-loginout {
         width: 30%;
+    }
+    .hero-celular {
+        margin-top: -680px;
+    }
+    .carousel-text {
+        position: absolute;
+        top: 0;
+        margin-top: 32px;
+        height: 100%;
+    }
+    .btn-saibaMais {
+        color: var(--CorBranco2);
+        background-color: var(--CorBase);
+        padding: 22px 64px;
+        font-size: 24px;
+        font-weight: var(--FonteBold);
+        border-radius: 50px;
+        border: 1px solid transparent;
+        transition: all 0.2s ease-out;
+        -webkit-transition: all 0.2s ease-out;
+        position: absolute;
+        bottom: 56px;
+        left: 120px;
+        width: 70%;
+    }
+    .bg-carrosel .carousel-control-prev {
+        left: -220px !important;
+        opacity: 1;
+        -webkit-opacity: 1;
+    }
+    .bg-carrosel .carousel-control-next {
+        right: -220px !important;
+        opacity: 1;
+        -webkit-opacity: 1;
+    }
+    .carousel-text h2, .carousel-text p {
+        margin-left: 120px;
     }
 }
