--- a/css/style.css
+++ b/css/style.css
@@ -420,8 +420,8 @@ h1 {
 .horizontal-bar {
     width: 100%;
     height: 2px;
-    background-color: var(--CorPreto);
-    margin: 8px auto;
+    background-color: #34343463;
+    margin: 8px 0 16px 0;
 }
 
 #navbar .dropdown-cadastrar {
@@ -430,6 +430,11 @@ h1 {
     border-radius: 4px;
     transition: color 0.2s;
     -webkit-transition: color 0.2s;
+}
+
+#navbar .dropdown-cadastrar:active{
+    color: var(--CorCinzaEscuro);
+    background: var(--CorBaseHover);
 }
 
 #navbar .dropdown-cadastrar:hover {
@@ -610,6 +615,8 @@ h1 {
 
 .bg-comoFunciona .card:hover {
     transform: scale(1.02);
+    box-shadow: 0 0 24px 6px rgb(0 0 0 / 20%);
+    -webkit-box-shadow: 0 0 24px 6px rgb(0 0 0 / 20%);
 }
 
 .bg-comoFunciona h2 {
