--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,9 @@
     --baseDark: #1A2C40;
     --base: #1565C0;
     --baseLight: #538ACA;
-    --accent-10: #202020;
-    --accent-9: #282828;
-    --accent-8: #000;
+    --accent-10: #000;
+    --accent-9: #202020;
+    --accent-8: #282828;
     --accent-7: #343434;
     --accent-6: #484848;
     --accent-5: #5B5B5B;
@@ -331,6 +331,8 @@ label {
     margin-right: auto;
     justify-content: space-between;
     z-index: 1;
+    transition: margin .2s ease-out;
+
 }
 
 .topbar__fluid.fixed {
@@ -352,6 +354,7 @@ label {
     margin-right: auto;
     justify-content: space-between;
     z-index: 2;
+    transition: margin .2s ease-out;
 }
 
 .topbar.fixed {
@@ -360,6 +363,8 @@ label {
     position: fixed;
     background-color: var(--accent-0);
     width: 100%;
+    transition: margin .2s ease-out;
+
 }
 
 .topbar__list {
@@ -711,7 +716,7 @@ label {
 }
 
 .rotes__list__item__title {
-    color: var(--accent-8);
+    color: var(--accent-10);
     font-weight: var(--regular);
     font-size: var(--px18);
     font-family: var(--poppins);
@@ -935,7 +940,7 @@ label {
 /* statistics */
 
 .statistics {
-    background-color: var(--accent-9);
+    background-color: var(--accent-8);
     padding: 32px 0;
     margin-bottom: -2px;
 }
@@ -982,7 +987,7 @@ label {
 /* footer */
 
 .footer {
-    background-color: var(--accent-10);
+    background-color: var(--accent-9);
     padding: 16px 0;
     position: relative;
     margin-bottom: -1px;
@@ -1062,7 +1067,7 @@ label {
 }
 
 .footer--2 {
-    background-color: var(--accent-10);
+    background-color: var(--accent-9);
     padding: 8px 0;
 }
 
