--- a/css/main.css
+++ b/css/main.css
@@ -830,6 +830,164 @@ label {
 
 /* --- */
 
+/* loading */
+.loading__background{
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background-color: white;
+    z-index: 99999999;
+}
+
+.loading{
+    position: relative;
+    width: 150px;
+    height: 75px;
+    top: 50%;
+    transform: translateY(-50%);
+    left: 0;
+    right: 0;
+    margin: auto;
+    animation: loading 8s infinite;
+}
+
+@keyframes loading {
+    0%{ 
+        transform: translateX(-20%);
+    }
+    50%{
+        transform: translateX(20%);
+
+    }
+    100%{
+        transform: translateX(-20%);
+        
+    }
+}
+
+.loading__head{
+    position: absolute;
+    background-color: var(--base);
+    border-radius: 0 12px 4px 0;
+    top: -5px;
+    right: 0;
+    height: 55px;
+    width: 45px;
+    z-index: 1;
+    box-shadow: -6px 12px 12px rgba(0, 0, 0, 0.2);
+}
+.loading__head__detail{
+    position: absolute;
+    height: 35px;
+    width: 20px;
+    border: 1px solid var(--accent-2);
+    border-top: none;
+    border-right: none;
+    top: 0;
+    right: 0;
+    border-radius: 0 12px 0 4px;
+    background: linear-gradient(-45deg, var(--base), var(--baseLight));
+    z-index: 2;
+}
+
+.loading__body{
+    position: absolute;
+    background-color: var(--accent-3);
+    height: 48px;
+    width: 100px;
+    border-radius: 8px 4px 0 0 ;
+    z-index: 1;
+    top: 2px;
+    box-shadow: -6px 12px 12px rgba(0, 0, 0, 0.2);
+}
+
+.loading__body__image{
+    position: absolute;
+    width: 100px;
+    padding: 5px;
+    height: 50px;
+    object-fit: contain;
+}
+
+.loading__wheel{
+    position: absolute;
+    height: 35px;
+    width: 35px;
+    border-radius: 100%;
+    background-color: var(--accent-4);
+    border: 3px solid var(--accent-0);
+}
+
+.loading__wheel.--1{
+    bottom: 0;
+    z-index: 2;
+    left: 22px;
+}
+
+.loading__wheel.--2{
+    bottom: 0;
+    z-index: 2;
+    right: 14px;
+}
+.loading__wheel.--3{
+    bottom: 0;
+    z-index: 0;
+    right:  26px;
+    background-color: var(--accent-9);
+}
+.loading__wheel.--4{
+    bottom: 0;
+    left: 10px;
+    z-index: 0;
+    background-color: var(--accent-9);
+}
+.loading__wind{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 5;
+    opacity: 1;
+    animation: wind 3s infinite linear;
+}
+.loading__wheel__inside{
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    background: var(--accent-7);
+    border: 2px dashed black;
+    border-radius: 100%;
+    transform-origin: center;
+    animation: wheel 3s linear infinite;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 0;
+    left: 0;
+    margin: auto;
+
+}
+
+@keyframes wheel {
+    0%{
+        transform: scale(1) translateY(-50%) rotate(0);
+    }
+    50%{
+        transform: scale(0.98) translateY(-50%) rotate(180deg);
+    }
+    100%{
+        transform: scale(1) translateY(-50%) rotate(360deg);
+    }
+}
+
+@keyframes wind {
+    0%{
+        transform: translateX(100%);
+    }
+    100%{
+        transform: translateX(-100%);
+    }
+}
+/* --- */
+
 /* animations */
 @keyframes slide-down {
     0% {
